--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
+    "mongoose": "^8.7.0",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
